<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:columnCount="2"
    android:padding="@dimen/padding_normal_TextView"
    android:orientation="vertical"
    android:background="@color/button_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        android:padding="@dimen/padding_normal_TextView"
        android:orientation="horizontal"
        android:background="@color/button_background">

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_height="40dp"
            android:layout_columnSpan="2"
            style="@style/bigText"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/requestokey" />

        <TextView
            android:id="@+id/tv_item_state1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            style="@style/normalText"
            android:text="@string/status"/>

        <TextView
            android:id="@+id/tv_item_state"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            style="@style/normalText"
            android:text="@string/status" />

        <TextView
            android:id="@+id/tv_item_id1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            style="@style/normalText"
            android:text="@string/numberloan"/>

        <TextView
            android:id="@+id/tv_item_id"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            style="@style/normalText"
            android:text="@string/numberloan"/>
        <TextView
            android:id="@+id/tv_item_name1"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            style="@style/normalText"
            android:text="@string/namecustomer"/>

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_columnWeight="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            style="@style/normalText"
            android:text="@string/namecustomer" />
        <TextView
            android:id="@+id/tv_item_phone1"
            android:layout_columnWeight="1"
            style="@style/normalText"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/telefon"/>

        <TextView
            android:id="@+id/tv_item_phone"
            android:layout_columnWeight="1"
            style="@style/normalText"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/telefon"/>
        <TextView
            android:id="@+id/tv_item_amount1"
            android:layout_columnWeight="1"
            style="@style/normalText"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
              android:text="@string/amount"/>

        <TextView
            android:id="@+id/tv_item_amount"
            android:layout_columnWeight="1"
            style="@style/normalText"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
                    android:text="@string/amount"/>
        <TextView
            android:id="@+id/tv_item_percent1"
            android:layout_columnWeight="1"
            style="@style/normalText"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/percentinyear"/>

        <TextView
            android:id="@+id/tv_item_percent"
            android:layout_columnWeight="1"
            style="@style/normalText"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/percentinyear"/>
        <TextView
            android:id="@+id/tv_item_period1"
            android:layout_columnWeight="1"
            style="@style/normalText"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/periodmonth" />

        <TextView
            android:id="@+id/tv_item_period"
            android:layout_columnWeight="1"
            style="@style/normalText"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:text="@string/periodmonth" />
    </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:background="@drawable/bg_button"
            android:text="@string/tomainpage"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>