<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_login"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Form login"
        android:textColor="#81D4FA"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:drawableLeft="@drawable/img_taikhoan"
        android:hint="user name"
        style="@style/edit_login"
         />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_username"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/img_matkhau"
        style="@style/edit_login"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_below="@+id/editText_password"
        android:background="@drawable/bg_button"
        style="@style/Buttons" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/registeration"
        android:layout_below="@+id/btn_login"
        android:background="@drawable/bg_button"
        style="@style/Buttons" />

</RelativeLayout>