<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:background="@color/button_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/btn_CreateNewLoan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/app_margin"
            android:text="@string/get_money" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/item_loan_amount"
                style="@style/smallText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/item_loan_rercent"
                style="@style/smallText" />
            <TextView
                   android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/item_loan_period"
                style="@style/smallText" />
            <TextView
                android:id="@+id/sort"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/item_loan_status"
                style="@style/smallText" />
            <TextView
                android:id="@+id/sort_approved"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_margin="@dimen/app_margin"
                android:background="@color/item_loan_bg_aproved"/>
            <TextView
                android:id="@+id/sort_rejected"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_margin="@dimen/app_margin"
                android:background="@color/item_loan_bg_rejected"/>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_edit"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/stat_sys_download" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>